.help to position: absolute -> fixes the misaligned help text

--- a/trunk/package/webif/files/www/webif.css
+++ b/trunk/package/webif/files/www/webif.css
@@ -223,7 +223,7 @@ th {
 
 .helpform
 {
-	position: relative;
+	position: absolute;
  	float: right;
  	margin-right: 2em;
 }
